--- a/styles.css
+++ b/styles.css
@@ -119,29 +119,85 @@ h2 {
     font-weight: bold;
     text-transform: uppercase;
     font-size: 2em;
+    padding: 20px;
 }
 
 p {
     font-size: 1.25em;
     line-height: 1.5rem;
-    padding: 2.5px; 
+    padding: 5px; 
 }
 
 img {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    padding: 5px;
+}
+
+footer {
+    text-align: center;
+    text-transform: uppercase;
+    color: white;
+}
+
+footer p {
+    text-align: center;
+}
+
+figcaption {
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bold;
 }
 
 figcaption, label, input, small {
-    font-size: 1.5em;
+    font-size: 1em;
+}
+
+/*form*/
+
+form{
+	width: 350px;
+	margin: 16px auto;
+}
+
+input, label, select, textarea {
+    display: block;
+    width: 100%;
+}
+
+label{
+    text-align: left;	
+    text-transform: uppercase;
+}
+
+input, select, textarea {
+	padding: 10px;
+	font-size: 1rem;
+	margin-bottom: 20px;
+}
+
+#my-submit {
+    background-color: #007d7b;
+    border-top-right-radius: 5rem;
+    border-bottom-left-radius: 5rem;
+    border-bottom-right-radius: 5rem;
+    border-top-left-radius: 5rem;
+	font-size: 1.3rem;
+	font-weight: bold;
+    color: white;
+}
+
+#my-submit:hover {
+    text-decoration: underline;
 }
 
 
 
-@media screen and (min-width: 550px) {
+@media screen and (min-width: 420px) {
     body {
-        max-width: 550px;
+        max-width: 420px;
     }
     nav ul {
         display: grid;
