--- a/styles.css
+++ b/styles.css
@@ -126,6 +126,10 @@ h2 {
     padding: 20px;
 }
 
+#contact p {
+    text-align: center;
+}
+
 p {
     font-size: 1.25em;
     line-height: 1.5rem;
@@ -239,6 +243,25 @@ input:focus, select:focus, textarea:focus{
         display: grid;
         grid-template-columns: 1fr 1fr;
     } 
+
+    h1 {
+        text-align: left;
+    }
+
+    form{
+        width: 650px;
+        margin: 16px auto;
+    }
+
+    #my-submit {
+        width: 22em;
+        height: 2.2em;
+        margin: 0 auto;
+    }
+
+    
+   
+
 }
 
 @media screen and (min-width: 1100px) {
@@ -252,4 +275,20 @@ input:focus, select:focus, textarea:focus{
         grid-template-columns: 1fr 1fr 1fr;
     }
 
+    form{
+        width: 950px;
+        margin: 16px auto;
+    }
+
+    #my-submit {
+        width: 30em;
+        height: 2.2em;
+        margin: 0 auto;
+    }
+
+    nav a {
+        display: flex;
+        justify-content: right;
+        margin-left: 200px;
+    }
 }
